new change in header

--- a/templates/index.html
+++ b/templates/index.html
@@ -283,9 +283,9 @@
 
         /* Main Header */
         .header {
-            background: #0350a3 !important; /* Force the blue background */
+            background: #0350a3 !important;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0);
-            position: sticky;
+            position:sticky;
             top: 0;
             z-index: 1000;
         }
@@ -417,21 +417,17 @@
             top: -100%;
             /* Changed from left: -100% to top: -100% */
             left: 0;
-            /* Set left to 0 */
             width: 100%;
-            /* Changed to full width */
-            height: 100vh;
+            height:auto;
             background: #030303df;
             z-index: 1001;
             transition: all 0.4s;
             overflow-y: auto;
             box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
-            /* Changed shadow direction */
         }
 
         .mobile-menu.active {
             top: 0;
-            /* Changed from left: 0 to top: 0 */
         }
 
         .mobile-menu-header {
