--- a/templates/about.html
+++ b/templates/about.html
@@ -596,9 +596,9 @@
             <div class="footer-section">
                 <h3>Discover</h3>
                 <ul class="footer-links" >
-                    <li><a href="{% url 'index' %}">Home</a></li>
-                    <li><a href="{% url 'about' %}">About</a></li>
-                    <li><a href="{% url 'services' %}">Services</a></li>
+                    <li><a href="{% url 'index' %}">HOME</a></li>
+                    <li><a href="{% url 'about' %}">ABOUT</a></li>
+                    <li><a href="{% url 'services' %}">SERVICES</a></li>
                 </ul>
             </div>
             
@@ -606,7 +606,7 @@
                 <h3>Contact Us</h3>
                <a  style="text-decoration: none; color: white; "  href="https://wa.me/+919645129777?text=I%20would%20like%20to%20know%20about%20more!"><p  >+91 96451 29777</p> </a>
                <a  style="text-decoration: none; color: white;" href="tel:+919846845777"><p  >+91 98468 45777</p> </a>
-               <a  style="text-decoration: none; color: white;"  href="mailto:info@devlokdevelopers.com?subject=Property%20Inquiry&body=Hello%20DEVLOK%2C%20I%27m%20interested%20in%20your%20properties.%20Please%20provide%20more%20details."><p  >info@devlokdevelopers.com</p></a>
+               <a  style="text-decoration: none; color: white;"  href="mailto:info@devlokdevelopers.com?subject=Property%20Inquiry&body=Hello%20DEVLOK%2C%20I%27m%20interested%20in%20your%20properties.%20Please%20provide%20more%20details."><p>info@devlokdevelopers.com</p></a>
             </div>
             
             <div class="footer-section">
